Add ZIP Code information

--- a/P5_AV_Deployment/AV_Deployment.ipynb
+++ b/P5_AV_Deployment/AV_Deployment.ipynb
@@ -6,12 +6,12 @@
     "collapsed": false
    },
    "source": [
-    "<img src=\"Pittsburgh.png\">"
+    "<a href=\"http://zipatlas.com/us/pa/pittsburgh/zip-code-comparison/median-household-income.htm\"><img src=\"Pittsburgh.png\"></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Autonomus Vehicle Deployment dataset has 938 survey responces with 5 variables each.\n",
+      "Autonomus Vehicle Deployment dataset has 938 survey responces with 12 variables each.\n",
       "\n"
      ]
     }
@@ -39,6 +39,8 @@
     "\n",
     "# Load the Autonomus Vehicle Deployment in Pittsburgh dataset\n",
     "data = pd.read_csv('data_prep_AV.csv')\n",
+    "data_income = pd.read_csv('data_zip_AV.csv')\n",
+    "\n",
     "zipcodes = data['ZipCode']\n",
     "pedestrian = data['pedestrian']\n",
     "\n",
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -218,6 +220,65 @@
     "print(\"----------------------\")\n",
     "for code in zip_participants:\n",
     "    print ('%d : %d' % (code, zip_participants[code]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      $85,102.00 \n",
+      "1      $67,370.00 \n",
+      "2      $60,717.00 \n",
+      "3      $58,440.00 \n",
+      "4      $55,016.00 \n",
+      "5      $48,415.00 \n",
+      "6      $46,913.00 \n",
+      "7      $45,173.00 \n",
+      "8      $44,018.00 \n",
+      "9      $43,750.00 \n",
+      "10     $41,367.00 \n",
+      "11     $40,756.00 \n",
+      "12     $40,562.00 \n",
+      "13     $39,526.00 \n",
+      "14     $38,507.00 \n",
+      "15     $38,439.00 \n",
+      "16     $38,292.00 \n",
+      "17     $37,889.00 \n",
+      "18     $35,983.00 \n",
+      "19     $34,727.00 \n",
+      "20     $34,067.00 \n",
+      "21     $33,724.00 \n",
+      "22     $32,859.00 \n",
+      "23     $32,552.00 \n",
+      "24     $30,725.00 \n",
+      "25     $30,668.00 \n",
+      "26     $30,625.00 \n",
+      "27     $28,517.00 \n",
+      "28     $28,156.00 \n",
+      "29     $27,595.00 \n",
+      "30     $27,041.00 \n",
+      "31     $27,031.00 \n",
+      "32     $26,712.00 \n",
+      "33     $24,178.00 \n",
+      "34     $23,841.00 \n",
+      "35     $22,880.00 \n",
+      "36     $18,598.00 \n",
+      "37     $18,473.00 \n",
+      "38     $14,399.00 \n",
+      "Name: AvgIncomeHouse, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_income = data_income['AvgIncomeHouse']\n",
+    "print (average_income)"
    ]
   },
   {
