ND Progress Check-in

--- a/P5_AV_Deployment/AV_Deployment.ipynb
+++ b/P5_AV_Deployment/AV_Deployment.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +206,16 @@
       "15226 : 5\n",
       "15227 : 4\n",
       "15228 : 18\n",
-      "15229 : 6\n"
+      "15229 : 6\n",
+      "\n",
+      "\n",
+      "0 : 254\n",
+      "1 : 684\n",
+      "\n",
+      "\n",
+      "0 : 139\n",
+      "1 : 680\n",
+      "2 : 119\n"
      ]
     }
    ],
@@ -215,71 +224,206 @@
     "\n",
     "# How many people from which zipcode participated\n",
     "zip_participants = collections.Counter(zipcodes)\n",
+    "zip_familiarity = collections.Counter(familiarity)\n",
+    "zip_approval = collections.Counter(approval)\n",
     "\n",
     "print(\" Zip  : # Participants\")\n",
     "print(\"----------------------\")\n",
     "for code in zip_participants:\n",
-    "    print ('%d : %d' % (code, zip_participants[code]))"
+    "    print ('%d : %d' % (code, zip_participants[code]))\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "for familiar in zip_familiarity:\n",
+    "    print ('%d : %d' % (familiar, zip_familiarity[familiar]))\n",
+    "    \n",
+    "print(\"\\n\")\n",
+    "for approv in zip_approval:\n",
+    "    print ('%d : %d' % (approv, zip_approval[approv]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0      $85,102.00 \n",
-      "1      $67,370.00 \n",
-      "2      $60,717.00 \n",
-      "3      $58,440.00 \n",
-      "4      $55,016.00 \n",
-      "5      $48,415.00 \n",
-      "6      $46,913.00 \n",
-      "7      $45,173.00 \n",
-      "8      $44,018.00 \n",
-      "9      $43,750.00 \n",
-      "10     $41,367.00 \n",
-      "11     $40,756.00 \n",
-      "12     $40,562.00 \n",
-      "13     $39,526.00 \n",
-      "14     $38,507.00 \n",
-      "15     $38,439.00 \n",
-      "16     $38,292.00 \n",
-      "17     $37,889.00 \n",
-      "18     $35,983.00 \n",
-      "19     $34,727.00 \n",
-      "20     $34,067.00 \n",
-      "21     $33,724.00 \n",
-      "22     $32,859.00 \n",
-      "23     $32,552.00 \n",
-      "24     $30,725.00 \n",
-      "25     $30,668.00 \n",
-      "26     $30,625.00 \n",
-      "27     $28,517.00 \n",
-      "28     $28,156.00 \n",
-      "29     $27,595.00 \n",
-      "30     $27,041.00 \n",
-      "31     $27,031.00 \n",
-      "32     $26,712.00 \n",
-      "33     $24,178.00 \n",
-      "34     $23,841.00 \n",
-      "35     $22,880.00 \n",
-      "36     $18,598.00 \n",
-      "37     $18,473.00 \n",
-      "38     $14,399.00 \n",
-      "Name: AvgIncomeHouse, dtype: object\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ZipCode</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>AvgIncomeHouse</th>\n",
+       "      <th>ZHVI</th>\n",
+       "      <th>AllBeneficiaries</th>\n",
+       "      <th>%Beneficiaries</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15201</td>\n",
+       "      <td>14,326</td>\n",
+       "      <td>$27,031.00</td>\n",
+       "      <td>$129,000.00</td>\n",
+       "      <td>2,920</td>\n",
+       "      <td>20.38%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15202</td>\n",
+       "      <td>21,022</td>\n",
+       "      <td>$34,727.00</td>\n",
+       "      <td>$132,700.00</td>\n",
+       "      <td>4,666</td>\n",
+       "      <td>22.20%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15203</td>\n",
+       "      <td>9,613</td>\n",
+       "      <td>$27,595.00</td>\n",
+       "      <td>$168,600.00</td>\n",
+       "      <td>1,761</td>\n",
+       "      <td>18.32%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15204</td>\n",
+       "      <td>9,502</td>\n",
+       "      <td>$32,859.00</td>\n",
+       "      <td>$72,700.00</td>\n",
+       "      <td>1,899</td>\n",
+       "      <td>19.99%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15205</td>\n",
+       "      <td>22,586</td>\n",
+       "      <td>$38,507.00</td>\n",
+       "      <td>$128,700.00</td>\n",
+       "      <td>5,531</td>\n",
+       "      <td>24.49%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ZipCode Population AvgIncomeHouse          ZHVI AllBeneficiaries  \\\n",
+       "0    15201     14,326    $27,031.00   $129,000.00             2,920   \n",
+       "1    15202     21,022    $34,727.00   $132,700.00             4,666   \n",
+       "2    15203      9,613    $27,595.00   $168,600.00             1,761   \n",
+       "3    15204      9,502    $32,859.00    $72,700.00             1,899   \n",
+       "4    15205     22,586    $38,507.00   $128,700.00             5,531   \n",
+       "\n",
+       "  %Beneficiaries  \n",
+       "0         20.38%  \n",
+       "1         22.20%  \n",
+       "2         18.32%  \n",
+       "3         19.99%  \n",
+       "4         24.49%  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "average_income = data_income['AvgIncomeHouse']\n",
-    "zipcode_income = data_income['ZipCode']\n",
-    "print (average_income)"
+    "from IPython.display import display\n",
+    "\n",
+    "# Print the first few entries of the Demographics Data\n",
+    "display(data_income.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pedestrian</th>\n",
+       "      <th>bicycle</th>\n",
+       "      <th>approval</th>\n",
+       "      <th>familiarity</th>\n",
+       "      <th>ZipCode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15201</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pedestrian  bicycle  approval  familiarity  ZipCode\n",
+       "0           1        1         0            1    15201\n",
+       "1           1        0         0            0    15201\n",
+       "2           1        0         0            0    15201\n",
+       "3           1        2         0            1    15201\n",
+       "4           0        1         1            1    15201"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Print the first few entries of the Survey Data\n",
+    "display(data.head())"
    ]
   },
   {
