MLEND Progress Check in

--- a/P5_AV_Deployment/AV_Deployment.ipynb
+++ b/P5_AV_Deployment/AV_Deployment.ipynb
@@ -6,12 +6,12 @@
     "collapsed": false
    },
    "source": [
-    "<a href=\"http://zipatlas.com/us/pa/pittsburgh/zip-code-comparison/median-household-income.htm\"><img src=\"Pittsburgh.png\"></a>"
+    "<a href=\"http://www.pinsdaddy.com/pittsburgh-pa-area-map_LaF3VctaPpxf6lh1NCy0vAAlxhUWkl1212ESeozWFD8/\"><img src=\"pittsburghmetrowallmap.jpg\"></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 179,
    "metadata": {
     "collapsed": false
    },
@@ -31,8 +31,6 @@
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "# import visuals as vs # Supplementary code\n",
-    "# from sklearn.cross_validation import ShuffleSplit\n",
     "\n",
     "# Pretty display for notebooks\n",
     "%matplotlib inline\n",
@@ -42,9 +40,7 @@
     "\n",
     "zipcodes = data['ZipCode']\n",
     "pedestrian = data['Pedestrian']\n",
-    "\n",
     "familiarity = data['Familiarity'] \n",
-    "\n",
     "approval = data['Approval'] \n",
     "neutral = data['Approval']\n",
     "disapproval = data['Approval']\n",
@@ -55,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 180,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 181,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 182,
    "metadata": {
     "collapsed": false
    },
@@ -366,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 183,
    "metadata": {
     "collapsed": false
    },
@@ -419,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
@@ -452,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 184,
    "metadata": {
     "collapsed": false
    },
@@ -468,7 +464,7 @@
    ],
    "source": [
     "def preprocess_features(X):\n",
-    "    ''' Preprocesses the student data and converts non-numeric binary variables into\n",
+    "    ''' Preprocesses the data and converts non-numeric binary variables into\n",
     "        binary (0/1) variables. Converts categorical variables into dummy variables. '''\n",
     "    \n",
     "    # Initialize new output DataFrame\n",
@@ -497,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 185,
    "metadata": {
     "collapsed": false
    },
@@ -530,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 186,
    "metadata": {
     "collapsed": true
    },
@@ -580,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 187,
    "metadata": {
     "collapsed": false
    },
@@ -592,31 +588,31 @@
       "\n",
       " Model 1 200: DecisionTreeClassifier\n",
       "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0008 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
-      "F1 score for training set: 0.8832.\n",
+      "Trained model in 0.0018 seconds\n",
       "Made predictions in 0.0004 seconds.\n",
+      "F1 score for training set: 0.8832.\n",
+      "Made predictions in 0.0005 seconds.\n",
       "F1 score for test set: 0.6006.\n",
       "\n",
       " Model 1 500: DecisionTreeClassifier\n",
       "Training a DecisionTreeClassifier using a training set size of 500. . .\n",
-      "Trained model in 0.0012 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
-      "F1 score for training set: 0.7984.\n",
+      "Trained model in 0.0016 seconds\n",
       "Made predictions in 0.0007 seconds.\n",
+      "F1 score for training set: 0.7984.\n",
+      "Made predictions in 0.0006 seconds.\n",
       "F1 score for test set: 0.6013.\n",
       "\n",
       " Model 1 700: DecisionTreeClassifier\n",
       "Training a DecisionTreeClassifier using a training set size of 700. . .\n",
-      "Trained model in 0.0017 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0004 seconds.\n",
       "F1 score for training set: 0.7637.\n",
-      "Made predictions in 0.0002 seconds.\n",
+      "Made predictions in 0.0003 seconds.\n",
       "F1 score for test set: 0.6005.\n",
       "\n",
       " Model 2 200: GaussianNB\n",
       "Training a GaussianNB using a training set size of 200. . .\n",
-      "Trained model in 0.0007 seconds\n",
+      "Trained model in 0.0008 seconds\n",
       "Made predictions in 0.0003 seconds.\n",
       "F1 score for training set: 0.6294.\n",
       "Made predictions in 0.0003 seconds.\n",
@@ -624,31 +620,31 @@
       "\n",
       " Model 2 500: GaussianNB\n",
       "Training a GaussianNB using a training set size of 500. . .\n",
-      "Trained model in 0.0008 seconds\n",
-      "Made predictions in 0.0004 seconds.\n",
-      "F1 score for training set: 0.6107.\n",
+      "Trained model in 0.0013 seconds\n",
       "Made predictions in 0.0003 seconds.\n",
+      "F1 score for training set: 0.6107.\n",
+      "Made predictions in 0.0004 seconds.\n",
       "F1 score for test set: 0.6119.\n",
       "\n",
       " Model 2 700: GaussianNB\n",
       "Training a GaussianNB using a training set size of 700. . .\n",
-      "Trained model in 0.0007 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Trained model in 0.0009 seconds\n",
+      "Made predictions in 0.0005 seconds.\n",
       "F1 score for training set: 0.6085.\n",
       "Made predictions in 0.0004 seconds.\n",
       "F1 score for test set: 0.6119.\n",
       "\n",
       " Model 3 200: SVC\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0017 seconds\n",
-      "Made predictions in 0.0007 seconds.\n",
+      "Trained model in 0.0016 seconds\n",
+      "Made predictions in 0.0006 seconds.\n",
       "F1 score for training set: 0.6632.\n",
-      "Made predictions in 0.0009 seconds.\n",
+      "Made predictions in 0.0008 seconds.\n",
       "F1 score for test set: 0.6099.\n",
       "\n",
       " Model 3 500: SVC\n",
       "Training a SVC using a training set size of 500. . .\n",
-      "Trained model in 0.0067 seconds\n",
+      "Trained model in 0.0090 seconds\n",
       "Made predictions in 0.0030 seconds.\n",
       "F1 score for training set: 0.6154.\n",
       "Made predictions in 0.0016 seconds.\n",
@@ -656,21 +652,11 @@
       "\n",
       " Model 3 700: SVC\n",
       "Training a SVC using a training set size of 700. . .\n",
-      "Trained model in 0.0127 seconds\n",
-      "Made predictions in 0.0056 seconds.\n",
+      "Trained model in 0.0181 seconds\n",
+      "Made predictions in 0.0057 seconds.\n",
       "F1 score for training set: 0.6118.\n",
-      "Made predictions in 0.0021 seconds.\n",
+      "Made predictions in 0.0033 seconds.\n",
       "F1 score for test set: 0.6119.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/iAmazing/anaconda/lib/python2.7/site-packages/sklearn/metrics/classification.py:1023: UserWarning: Note that pos_label (set to '1') is ignored when average != 'binary' (got 'weighted'). You may use labels=[pos_label] to specify a single positive class.\n",
-      "  % (pos_label, average), UserWarning)\n",
-      "/Users/iAmazing/anaconda/lib/python2.7/site-packages/sklearn/metrics/classification.py:1113: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
@@ -723,26 +709,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/iAmazing/anaconda/lib/python2.7/site-packages/sklearn/metrics/classification.py:1023: UserWarning: Note that pos_label (set to '1') is ignored when average != 'binary' (got 'macro'). You may use labels=[pos_label] to specify a single positive class.\n",
-      "  % (pos_label, average), UserWarning)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0056 seconds.\n",
+      "Made predictions in 0.0062 seconds.\n",
       "Tuned model has a training F1 score of 0.6495.\n",
-      "Made predictions in 0.0021 seconds.\n",
+      "Made predictions in 0.0026 seconds.\n",
       "Tuned model has a testing F1 score of 0.6009.\n"
      ]
     }
@@ -752,7 +730,7 @@
     "from sklearn.grid_search import GridSearchCV\n",
     "\n",
     "# Create the parameters list you wish to tune\n",
-    "parameters = [{'C': [1, 10, 100, 200, 300, 400, 500, 600, 700],\n",
+    "parameters = [{'C': [1, 10, 100, 200, 300, 400, 500, 600, 700, 1000],\n",
     "   'gamma': [1e-2, 1e-3, 1e-4, 1e-5, 1e-6],\n",
     "   'kernel': ['rbf'], 'tol':[1e-3, 1e-4, 1e-5, 1e-6]\n",
     "  }]\n",
