--- a/P5_AV_Deployment/AV_Deployment.ipynb
+++ b/P5_AV_Deployment/AV_Deployment.ipynb
@@ -13,22 +13,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Autonomus Vehicle Deployment Prediction</h1><center><br>\n",
+    "# Autonomus Vehicle Deployment Prediction\n",
     "\n",
-    "Topics like efficiency of marketing initiatives, revenue increase, and improvement in customer satisfaction were subject for many recent research and white papers. David Levis et al. proposed automation of customer interaction analysis utilizing machine learning on their paper “Concurrent Reinforcement Learning from Customer Interactions” [1]. White paper “Machine Learning for e-mail marketers” by Boomtrain [2] explains benefits of autonomous email marketing.  Another paper, “How machine learning helps sales success” by Cognizant [3] explains how machine learning can be utilized to increase sales and enhance customer satisfaction. As an engineer in MBA program, I had a question to answer, how can I apply developments in technologies that I am excited about to promote that technology and make it successful? Especially to autonomous car industry. Survey conducted by BikePGH about interaction of pedestrians and bicyclists with autonomous cars in Pittsburgh, PA became handy and just in time for my project. Survey data can be found at following link: <a href=\"https://catalog.data.gov/dataset/autonomous-vehicle-survey-of-bicyclists-and-pedestrians-in-pittsburgh-2017\">Autonomous Vehicle Survey of Bicyclists and Pedestrians in Pittsburgh, 2017.</a><br>\n",
+    "Topics like efficiency of marketing initiatives, revenue increase, and improvement in customer satisfaction were subject for many recent research and white papers. David Levis et al. proposed automation of customer interaction analysis utilizing machine learning on their paper “Concurrent Reinforcement Learning from Customer Interactions” [1]. White paper “Machine Learning for e-mail marketers” by Boomtrain [2] explains benefits of autonomous email marketing.  Another paper, “How machine learning helps sales success” by Cognizant [3] explains how machine learning can be utilized to increase sales and enhance customer satisfaction. As an engineer in MBA program, I had a question to answer, how can I apply developments in technologies that I am excited about to promote that technology and make it successful? Especially to autonomous car industry. Survey conducted by BikePGH about interaction of pedestrians and bicyclists with autonomous cars in Pittsburgh, PA became handy and just in time for my project [6].\n",
     "\n",
-    "Understanding opinions of experienced citizens about AVs will assist AV companies in selecting their next cities and neighborhoods effectively for deployment and improve efficiency of sales and marketing strategies.<br>\n",
+    "Understanding opinions of experienced citizens about AVs will assist AV companies in selecting their next cities and neighborhoods effectively for deployment and improve efficiency of sales and marketing strategies.\n",
     "\n",
-    "Purpose of this project is to create a tool that can increase effectiveness and efficiency of AV deployment. One of the solutions is to conduct surveys and collect data from citizens of Pittsburgh and analyze demographics of participants. Create train and test datasets based on publically available demographics data of ZIP codes of participants combined with survey results. Further train an algorithm which can predict readiness of target city for AV deployment. <br>\n",
+    "Purpose of this project is to create a tool that can increase effectiveness and efficiency of AV deployment. One of the solutions is to conduct surveys and collect data from citizens of Pittsburgh and analyze demographics of participants. Create train and test datasets based on publically available demographics data of ZIP codes of participants combined with survey results. Further train an algorithm which can predict readiness of target city for AV deployment.\n",
     "\n",
-    "For more details refer to report in this folder.<br>"
+    "For more details refer to report in this folder."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Data Preporation</h1><center><br>"
+    "# Data Preporation"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Data Exploration and Statistics</h1><center><br>"
+    "# Data Exploration and Statistics"
    ]
   },
   {
@@ -440,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Functions and Data Processing</h1><center><br>"
+    "# Functions and Data Processing"
    ]
   },
   {
@@ -524,7 +524,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Algorithms and Techniques</h1><center><br>"
+    "# Algorithms and Techniques"
    ]
   },
   {
@@ -656,7 +656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Refinement</h1><center><br>"
+    "# Refinement"
    ]
   },
   {
@@ -708,7 +708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Model Evaluation and Validation</h1><center><br>"
+    "# Model Evaluation and Validation"
    ]
   },
   {
@@ -874,7 +874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>References</h1></center>\n",
+    "# References \n",
     "\n",
     "[1] David Silver, Leonard Newnham, David Barker, Suzanne Weller, Jason McFall ; \n",
     "Proceedings of the 30th International Conference on Machine Learning, PMLR 28(3):924-932, 2013. http://proceedings.mlr.press/v28/silver13.html \n",
