--- a/P5_AV_Deployment/AV_Deployment.ipynb
+++ b/P5_AV_Deployment/AV_Deployment.ipynb
@@ -6,7 +6,7 @@
     "collapsed": false
    },
    "source": [
-    "<a href=\"http://www.pinsdaddy.com/pittsburgh-pa-area-map_LaF3VctaPpxf6lh1NCy0vAAlxhUWkl1212ESeozWFD8/\"><img src=\"pittsburghmetrowallmap.jpg\"></a>"
+    "<a href=\"http://www.pinsdaddy.com/pittsburgh-pa-area-map_LaF3VctaPpxf6lh1NCy0vAAlxhUWkl1212ESeozWFD8/\"><img src=\"AVD_References/pittsburghmetrowallmap.jpg\"></a>"
    ]
   },
   {
